# kamel-desktop

./: .gitignore  .gitmodules  Cargo.toml
app/: Cargo.toml  build.rs
app/src/: main.rs
app/src/signal/: mod.rs  processor.rs
gh-emoji/: Cargo.toml
gh-emoji/src/: data_generated.rs  lib.rs
gui/: Cargo.toml
gui/src/: lib.rs
gui/src/controller/: channel.rs  command.rs  input.rs  mod.rs  platform.rs
gui/src/delegate/: application.rs  main_menu.rs  mod.rs
gui/src/states/: mod.rs
gui/src/views/: menu.rs  message.rs  mod.rs  style.rs  theme.rs
gui/src/widgets/: mod.rs
libsignal-service-rs/: Cargo.toml
libsignal-service-rs/libsignal-service/: build.rs
libsignal-service-rs/libsignal-service/src/: lib.rs  proto.rs
libsignal-service-rs/libsignal-service/src/protobuf/: mod.rs  signal.rs  signalservice.rs
matrix/: Cargo.toml
matrix/src/: lib.rs
presage/: Cargo.toml
presage/src/: manager.rs
signal/: Cargo.toml
signal/src/: attachment.rs  config.rs  lib.rs  lib_ll.rs  signal.rs  signal_ll.rs  storage.rs  storage_ll.rs  util.rs
