cargo-features = ["strip"]
[workspace]
members = [
    "data",
    "gui",
    "signal",
    "matrix",
    "app",
#    "libsignal-service-rs/libsignal-service",
#    "libsignal-service-rs/libsignal-service-hyper",
#    "libsignal-client"
]
build="build.rs"
exclude = [ "./libsignal-client","./libsignal-service-rs" ]

cargo-features = ["strip"]



[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"