[package]
name = "kamel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presage = { path = "../presage" }
druid = {git = "https://github.com/linebender/druid.git" , features =["im"] }
tokio = { version = "1.5.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = "0.1.5"
signal = {path = "../signal"}
uuid = {version = "0.8.2", features = ["serde"]}
log = "0.4.14"
log-panics = "2.0.0"
log4rs = "1.0.0"
anyhow = "1.0.45"
async-std = {version = "1.10.0"}
futures = "0.3.17"
mime_guess = "2.0.3"
mime2ext = {git ="https://github.com/blyxxyz/mime2ext.git"}
infer = "0.3"
gui = {path = "../gui"}

[[bin]]
name = "kamel"
path = "src/main.rs"