[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/linebender/druid.git" , features =["im"] }
signal = {path = "../signal"}
matrix = {path = "../matrix"}
async-std = {version = "1.10.0"}
log = "0.4.14"
#uuid = { path = "../uuid"}
uuid = {version = "0.8.2", features = ["serde"]}
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.13.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "time","io-util"] }
