[package]
name = "signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presage = { path = "../presage"}

anyhow = "1.0.40"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = { version = "0.19.0", features = ["event-stream"] }
derivative = "2.2.0"
dirs = "3.0.2"
emoji = "0.2.1"
gh-emoji = {path = "../gh-emoji"}
hostname = "0.3.1"
itertools = "0.10.0"
log = "0.4.14"
log-panics = "2.0.0"
log4rs = "1.0.0"
mime_guess = "2.0.3"
notify-rust = "4.5.0"
opener = "0.5.0"
phonenumber = "0.3.1"
regex-automata = "0.1.10"
scopeguard = "1.1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.13.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "time","io-util"] }
toml = "0.5.8"
unicode-width = "0.1.8"
uuid = {version = "0.8.2", features = ["serde","v4"]}
whoami = "1.1.2"
druid = {git = "https://github.com/linebender/druid.git" , features =["im"] }
async-std = {version = "1.10.0"}
druid-enums = { git = "https://github.com/finnerale/druid-enums" }